# diplom_tasktracker

./: docker-compose.yml  pyproject.toml
src/: db.py  main.py
src/templates/: archive.html  index.html
